--- a/index.html
+++ b/index.html
@@ -7,12 +7,16 @@
 </head>
 <body>
     <button onclick="subscribe()">subscribe</button>
+    <button onclick="sender()">send</button>
 
     <script>
-
+        import pusher from './push';
+        function sender(){
+            pusher();
+        }
         addEventListener('load', async () => {
             let sw = navigator.serviceWorker.register('./sw.js');
-            console.log(sw);
+            console.log("service worker",sw);
         })
 
         async function subscribe() {
@@ -20,9 +24,8 @@
             let push = await sw.pushManager.subscribe({
                 userVisibleOnly: true,
                 applicationServerKey: 'BA9y7TXQVGodMg9UvIamvB19lYb-ndgDyakDcm6dKNTKNW_-zMsbQpRzN5hEor4VsbfpZv3cEcI-U-t2ie_lJW0',
-
             })
-            console.log(JSON.stringify(push))
+            console.log("subscribed",JSON.stringify(push))
         }
 
 
