--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         addEventListener('load', async () => {
             let sw = navigator.serviceWorker.register('./sw.js');
             console.log("service worker",sw);
-            document.getElementById('output').innerHTML = sw.JSON();
+            
         })
 
         async function subscribe() {
@@ -23,6 +23,7 @@
                 applicationServerKey: 'BA9y7TXQVGodMg9UvIamvB19lYb-ndgDyakDcm6dKNTKNW_-zMsbQpRzN5hEor4VsbfpZv3cEcI-U-t2ie_lJW0',
             })
             console.log("subscribed",JSON.stringify(push))
+            document.getElementById('output').innerHTML = push.JSON();
         }
 
 
