--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 applicationServerKey: 'BA9y7TXQVGodMg9UvIamvB19lYb-ndgDyakDcm6dKNTKNW_-zMsbQpRzN5hEor4VsbfpZv3cEcI-U-t2ie_lJW0',
             })
             console.log("subscribed",JSON.stringify(push))
-            document.getElementById('output').innerHTML = push;
+            document.getElementById('output').innerHTML = push.json();
         }
 
 
