--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 userVisibleOnly: true,
                 applicationServerKey: 'BA9y7TXQVGodMg9UvIamvB19lYb-ndgDyakDcm6dKNTKNW_-zMsbQpRzN5hEor4VsbfpZv3cEcI-U-t2ie_lJW0',
             })
-            console.log("subscribed",JSON.stringify(push)
+            console.log("subscribed",JSON.stringify(push))
             document.getElementById('output').innerHTML = JSON.stringify(push);
         }
 
